# attack-sim

./: .flake8  .gitignore  AGENTS.md  README.md  app.json  package-lock.json  package.json  pyproject.toml  requirements.txt  run.py  start_redis.sh  stop_redis.sh
.github/instructions/: owasp-attacks-implementation.instructions.md
app/: __init__.py  config.py  errors.py  validation.py
app/routes/: __init__.py  attacks.py  dashboard.py  reports.py
app/static/css/: style.css
app/static/js/: app.js
app/templates/: attack_config.html  base.html  dashboard.html  results.html
attacks/: __init__.py  base.py  bruteforce.py  dictionary.py
attacks/owasp/: __init__.py  a01_broken_access.py  a02_crypto_failures.py  a03_injection.py  a04_insecure_design.py  a05_security_misconfig.py  a06_outdated_components.py  a07_auth_failures.py  a08_integrity_failures.py  a09_logging_monitoring.py  a10_ssrf.py  base_owasp.py
src/main/python/: main.py
src/main/python/app/: __init__.py  config.py  errors.py  validation.py
src/main/python/attacks/: __init__.py  (+1 more)
src/test/python/: conftest.py  manual_api_test.py  test_attacks.py  test_integration.py  test_routes.py
tests/: conftest.py  manual_api_test.py  test_api_endpoints.py  test_attacks.py  test_attacks_manual.py  test_integration.py  test_routes.py
wordlists/: common_passwords.txt  common_usernames.txt
worker/: .env.example  .gitignore  auth.py  celery_app.py  discovery.py  make_token.py  plugin_loader.py  requirements.txt  run_worker.sh  send_test.py  tasks.py  web_checks.py
worker/plugins/: test_header_plugin.py
(+20 files in other folders)
