[project]
name = "attack-sim"
version = "0.1.0"
description = "A web-based security testing tool for automated simulation of common attack vectors"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "werkzeug>=3.0.1",
    "beautifulsoup4>=4.12.0",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-flask>=1.3.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E203"]

[tool.pytest.ini_options]
testpaths = ["src/test/python"]
python_files = ["test_*.py"]
pythonpath = ["src/main/python"]
